# gndk-token

./: .gitignore  Anchor.toml  DEV_STATE.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
docs/: AUDIT_SCOPE.md  CERTIK_AUDIT_FIX_REPORT_260325.md  CERTIK_AUDIT_FIX_REPORT_260326.md  CERTIK_AUDIT_FIX_REPORT_260331.md  SECURITY_REVIEW_LOG.md  SIMULATION_REPORT.md  TOKENOMICS_SPEC.md
programs/burn-recycle/: Cargo.toml
programs/burn-recycle/src/: lib.rs
programs/gndk-registry/: Cargo.toml
programs/gndk-registry/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/gndk-registry/src/instructions/: admin.rs  initialize.rs  mod.rs  register_module.rs  register_user.rs  transfer_from_d2e_pool.rs  transfer_from_pool.rs
programs/l2e-module/: Cargo.toml
programs/l2e-module/src/: lib.rs
programs/vesting-program/: Cargo.toml
programs/vesting-program/src/: lib.rs
scripts/: devnet-full-test.ts  tge-devnet.ts  tge-integration-test.ts
simulation/: gndk-lifecycle.ts  tsconfig.json
tests/: gndk-registry.ts  phase2-4.ts
