[package]
name = "l2e-module"
version = "0.1.0"
description = "GNDK L2E Module — Learn-to-Earn reward distribution via CPI"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "l2e_module"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
gndk-registry = { path = "../gndk-registry", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
